# advent-of-code-2021

./: .gitmodules  README.md
C/: .gitignore
C/libraries/JC/: CMakeLists.txt  README.md
C/libraries/JC/.github/workflows/: documentation.yaml
C/libraries/JC/cmake/: FindCheck.cmake
C/libraries/JC/doc/: Doxyfile
C/libraries/JC/src/: CMakeLists.txt  jarray.c  jarray.h  jbits.c  jbits.h  jint.c  jint.h  jio.c  jio.h  jmmap.c  jmmap.h  jprint.c  jprint.h  jstring.c  jstring.h  jtime.c  jtime.h  jvector.c  jvector.h
C/libraries/JC/test/: CMakeLists.txt  check_jbits_prop.c
C/src/: CMakeLists.txt  day01.c  day02.c  day04.c  day05.c  day06.c  day07.c
D/: dub.json
D/source/days/: day01.d
bigdata/: .gitignore  01.py  02.py
other/C/: CMakeLists.txt  day01.c  day01f.c
other/C/src/: CMakeLists.txt  common.c  common.h  day01.c  day01f.c  day02.c  day03.c  day04.c  day05.c  day06.c
source/: app.d
source/days/: day.d  day01.d  day02.d  day03.d  days.d
