cmake_minimum_required(VERSION 3.16)
project(AoC C)

set(CMAKE_C_STANDARD 11)
list(APPEND CompileOptions -Wall -Wextra -mavx2 -march=native)
list(APPEND AsanOptions -fno-omit-frame-pointer -fsanitize=address)
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/../libraries/JC/src")

if (CMAKE_BUILD_TYPE MATCHES DEBUG)
    list(APPEND CompileOptions ${AsanOptions})
    list(APPEND LinkOptions ${AsanOptions})
else ()
    list(APPEND CompileOptions -Werror)
endif ()

function(AOC_DAY number)
    configure_file(${CMAKE_SOURCE_DIR}/../data/${number}.txt ${CMAKE_BINARY_DIR}/src/data/${number}.txt COPYONLY)

    add_executable(Day${number} day${number}.c)
    target_compile_options(Day${number} PUBLIC ${CompileOptions})
    target_link_libraries(Day${number} JC)
    target_link_options(Day${number} PUBLIC ${LinkOptions})
endfunction()

AOC_DAY(01)
AOC_DAY(02)
AOC_DAY(03)
AOC_DAY(04)
AOC_DAY(05)
AOC_DAY(06)

add_executable(Day01f day01f.c)
target_compile_options(Day01f PUBLIC ${CompileOptions})
target_link_libraries(Day01f JC)
target_link_options(Day01f PUBLIC ${LinkOptions})